// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Drawer > closable is false 1`] = `
<div
  class="ant-drawer ant-drawer-right css-var-root ant-drawer-open ant-drawer-inline"
  tabindex="-1"
>
  <div
    class="ant-drawer-mask"
  />
  <div
    class="ant-drawer-content-wrapper"
    style="width: 378px;"
  >
    <div
      aria-modal="true"
      class="ant-drawer-section"
      role="dialog"
    >
      <div
        class="ant-drawer-body"
      >
        Here is content of Drawer
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer > destroyOnHidden is true 1`] = `null`;

exports[`Drawer > rtl render > component should be rendered correctly in RTL direction 1`] = `null`;

exports[`Drawer > support closeIcon 1`] = `
<div
  class="ant-drawer ant-drawer-right css-var-root ant-drawer-open ant-drawer-inline"
  tabindex="-1"
>
  <div
    class="ant-drawer-mask"
  />
  <div
    class="ant-drawer-content-wrapper"
    style="width: 400px;"
  >
    <div
      aria-modal="true"
      class="ant-drawer-section"
      role="dialog"
    >
      <div
        class="ant-drawer-header ant-drawer-header-close-only"
      >
        <div
          class="ant-drawer-header-title"
        >
          <button
            aria-label="Close"
            class="ant-drawer-close"
            type="button"
          >
            <span>
              close
            </span>
          </button>
        </div>
      </div>
      <div
        class="ant-drawer-body"
      >
        Here is content of Drawer
      </div>
    </div>
  </div>
</div>
`;
